@@ -8,23 +8,28 @@
 
 package application.persistency ;
 
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import storage.* ;
 
 import java.sql.* ;
 import java.util.Enumeration ;
 import java.util.Hashtable ;
 
+
 public class CustomerMapper
 {
   // Implementation of hidden cache
-  
+
   private Hashtable cache ;
+
 
   private PersistentCustomer getFromCache(int oid)
   {
-    Integer key = new Integer(oid) ;
-    return (PersistentCustomer) cache.get(key) ;
+    Integer key = oid;
+    return (PersistentCustomer) cache.get(key);
   }
+
 
   private PersistentCustomer getFromCacheByDetails(String name, String phone)
   {
@@ -39,22 +44,23 @@ public class CustomerMapper
     return c ;
   }
 
+
   private void addToCache(PersistentCustomer c)
   {
-    Integer key = new Integer(c.getId()) ;
-    cache.put(key, c) ;
+    Integer key = Integer.valueOf(c.getId());
+    cache.put(key, c);
   }
   
   // Constructor:
-  
+
   private CustomerMapper()
   {
     cache = new Hashtable() ;
   }
 
   // Singleton:
-  
   private static CustomerMapper uniqueInstance ;
+
 
   public static CustomerMapper getInstance()
   {
@@ -63,6 +69,7 @@ public class CustomerMapper
     }
     return uniqueInstance ;
   }
+
 
   public PersistentCustomer getCustomer(String n, String p)
   {
@@ -77,7 +84,8 @@ public class CustomerMapper
     }
     return c ;
   }
-  
+
+
   PersistentCustomer getCustomerForOid(int oid)
   {
     PersistentCustomer c = getFromCache(oid) ;
@@ -91,7 +99,7 @@ public class CustomerMapper
   }
 
   // Add a customer to the database
-  
+
   PersistentCustomer createCustomer(String name, String phone)
   {
     PersistentCustomer c = getFromCacheByDetails(name, phone) ;
